--- a/Furnigo/css/style.css
+++ b/Furnigo/css/style.css
@@ -11,16 +11,14 @@ and open the template in the editor.
     margin-top: 1cm;
     text-align: center;
     list-style-type: none;
-    margin: 0;
-    padding: 0;
 
 }
 
 nav{
-    alignment-adjust: c;
+    alignment-adjust: middle;
     background-color: black;
-    height: auto;
-    width: 411px;
+    height: 30px;
+    width: 500px;
 }
 
 ul{
@@ -28,13 +26,12 @@ ul{
     margin: 0;
     padding: 0;
     overflow: hidden;
-    text-align: center;
-    height: 30px;
 }
 
 li{
     display: inline-block;
     vertical-align: middle;
+    height: 30px;
 }
 
 li a{
@@ -42,7 +39,7 @@ li a{
     text-align: center;
     padding: 14px;
     text-decoration: none;
-    height: 20px;
+    height: 30px;
 }
 
 li a:hover{
@@ -56,7 +53,21 @@ li a:hover{
 }
 
 #content{
-    width: 600px;
-    height: 500px;
-    background-color: wheat;
+    width: 1000px;
+    height: 700px;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&0.5+0,0.5+100 */
+    background: -moz-linear-gradient(top,  rgba(255,255,255,0.5) 0%, rgba(255,255,255,0.5) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ffffff', endColorstr='#80ffffff',GradientType=0 ); /* IE6-9 */
+
+    border: 2px solid black;
+}
+body{
+    background: url("../img/background.jpg") no-repeat center center fixed;
+    background-size: cover;
+}
+p{
+    padding: 5px;
+    text-align: justify;
 }
